[package]
name = "accomplishment_tracker_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.8.11"
serde = "1.0.197"
serde_derive = "1.0.197"
pulldown-cmark = "0.12.2"

[dependencies.chrono]
version = "0.4.38"
default-features = true
features = ["wasmbind", "js-sys", "serde"]

[dependencies.clap]
version = "*"
features = ["derive"]
